--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title>JavaScript learning</title>
    </head>
    <body>
+      <h1>Hello!</h1>
       <script src="scripts/script.js"></script>
    </body>
 </html>
