--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>JavaScript learning</title>
-   </head>
-   <body>
-      <h1>Hello!</h1>
-      <script src="scripts/script.js"></script>
-   </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>JavaScript learning</title>
+    </head>
+    <body>
+        <h1>Hello!</h1>
+        <script src="scripts/2.10.js"></script>
+    </body>
 </html>
